src/app.css
:root {
  --heading-font: "Inter", Helvetica, sans-serif;
  --body-font: "Roboto", "Inter", Helvetica, sans-serif;
}

@keyframes spin {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}

.spin {
  animation: spin 0.6s ease-in-out both;
}

:root:has(body.rs-theme-dark) {
  color-scheme: dark;
}

#root {
  height: 100vh;
}

body {
  overflow: hidden;
}

i.material-icons {
  margin-right: 5px;
  color: inherit;
}
i.material-icons.no-space {
  margin-right: 0;
}

.szh-menu__item--anchor {
  text-decoration: none !important;
  color: unset !important;
}

.rs-content {
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  padding: 10px;
  padding-inline: 15px;
}

.now-playing {
  padding: 5px 10px;
}

.is-bold {
  font-weight: bold;
}

.no-select {
  user-select: none;
}

.pointer {
  cursor: pointer;
}

.rs-btn.square {
  padding-inline: 8px;
}

.spacer {
  display: block;
}

.item-stat {
  padding: 16px;
  padding-inline: 10px;
}

.item-stat:first {
  padding-left: none;
}

.md-16 {
  font-size: 16px !important;
}

.single-line {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.red-400 {
  color: #ef5350 !important;
}

.center-vert {
  margin-block: auto;
}

.scrubber,
.scrubber .bar,
.bar__progress,
.bar__buffer {
  border-radius: 6px;
}

.scrubber .bar__progress {
  background-color: var(--rs-blue-500);
}

.scrubber {
  margin-block: 3px;
}

.lyrics {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--rs-body);
  padding: 20px;
  padding-block: 0;
  overflow-y: auto;
  overflow-x: hidden;
}
.lyrics p {
  display: block;
  width: 98%;
  font-size: 30px;
  margin-bottom: 15px;
}
.lyrics p:first-child {
  margin-top: 15px;
}
.lyrics p:last-child {
  margin-bottom: 60px;
}

.rs-footer {
  z-index: 2;
}

.footer-overlay nav {
  background-color: rgba(0, 0, 0, 0.8);
}

*,
.rs-text {
  font-family: var(--body-font);
}

.rs-heading,
.rs-stat-value {
  font-family: var(--heading-font);
}

.rs-stat-label {
  font-weight: 300;
}

.subtle-bordered {
  border: 1px solid var(--rs-border-primary);
}
.subtle-bordered:hover {
  border: 1px solid var(--rs-state-hover-bg);
}
.subtle-bordered:not(:first-child) {
  border-left: none;
}

.force-last {
  border-top-right-radius: 6px !important;
  border-bottom-right-radius: 6px !important;
}

.queue {
  height: 100%;
}

.rs-navbar-brand {
  cursor: default;
  & .rs-image {
    cursor: pointer;
  }
  &:hover {
    color: unset !important;
  }
}

@media (max-width: 626px) {
  .stop-btn {
    display: none;
  }
}

@media (max-width: 530px) {
  .track-time {
    display: none;
  }
}

@media (max-width: 370px) {
  .track-time {
    display: unset;
  }
}

